[package]
name = "css_mod"
version = "0.1.3"
description = "CSS Modules implementation for Rust web applications"
homepage = "https://github.com/art-in/css_mod"
repository = "https://github.com/art-in/css_mod"
authors = ["Sergey Gavrilov <artin@artin.space>"]
readme = "../README.md"
edition = "2021"
license = "MIT"

[dependencies]
once_cell = "1.10.0"
pest = "2.1.3"
pest_derive = "2.1.0"
glob = "0.3.0"
log = "0.4.14"
quote = "1.0.15"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.56"
thiserror = "1.0.30"
